src/Home.css
  .city-list {
    list-style: none; /* Remove bullet points */
    padding: 0;
  }
  
  .city-card {
    margin-bottom: 10px; /* Add some space between city cards */
  }
  
  .container {
    display: flex;
    justify-content: center;
    border-radius: 10px;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    margin: 3em 1em 3em 1em;
    padding: 1em;
}

.my-cities{
    font-weight: bold;
    color: #333333; /* Dark text color */
}

    .add-city input {
        background-color: #ffffff; /* White background for input field */
        color: #333333; /* Dark text color */
    }

    .error-message {
        color: #ff0000; /* Red error message */
    }

    .suggestions-list {
      list-style: none;
      margin: 0;
      padding: 0;
      background-color: #fff;
      border: 1px solid #ccc;
      border-top: none; /* Remove top border to blend with input field */
      position: absolute; /* Ensure dropdown overlays content below */
      box-shadow: 0px 4px 6px rgba(0,0,0,0.1); /* Subtle shadow for depth */
      max-height: 200px; /* Limit height and add scrollbar */
      overflow-y: auto; /* Add scrollbar when necessary */
      border-radius: 0 0 5px 5px; /* Rounded corners at the bottom */
      z-index: 1000; /* Ensure dropdown is above other content */
    }
    
    .suggestions-list li {
      padding: 10px;
      cursor: pointer;
      transition: background-color 0.2s ease-in-out;
    }
    
    .suggestions-list li:hover {
      background-color: #f0f0f0; /* Light grey background on hover */
    }
    
    /* This ensures the input and button are aligned properly */
    .add-city input, .add-city button {
      height: 40px; /* Adjust as needed */
    }

